made the height and width of all the parts of the app fixed values, fixed 'show done' fucntionality (it was reversed, only the not done items were displayed after the click), added new functionalities: scrolling when amount of item overflow on y axis, clicking Enter adds items to the list as if the 'Add' button was clicked.

--- a/style.css
+++ b/style.css
@@ -12,8 +12,10 @@ body {
 }
 
 .mainApp {
-    height: 60%;
-    width: 50%;
+    /* height: 60%;
+    width: 50%; */
+    height: 30rem;
+    width: 25rem;
     border: 1px solid black;
     display: flex;
     justify-content: flex-start;
@@ -42,11 +44,15 @@ body {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    padding: 1rem 0rem;
+    height: 2rem;
+    /* padding: 1rem 0rem; */
 }
 
 .taskListDiv {
     width: 100%;
+    padding-top: 0.5rem;
+    overflow-y: scroll;
+    height: 25rem;
 }
 
 /* .taskList {
